--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ font-family:sans-serif;
 }
 #header{
 height:50vh;
-background-image: url("ig/pic1.png");
+background-image: url("pic1.png");
 background-position:center;
 background-size:cover;
 background-repeat:no-repeat;
