--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@ height:70vh;
 <body>
 <div id="header">
 <div class="container">
-<img src="ig/logo1.png" class="logo">
+<img src="logo1.png" class="logo">
 <div class="header-text">
 <h1>The purpose is to<br>teach, bing learning to people</h1>
 <span class="square"></span>
@@ -385,7 +385,7 @@ Lorem ipsum dolor sitdipiscing.Lorem ipsum dolor sit adipiscingelit.Etiam eu luc
 <li><a href="#contact">CONTACT</a></li>
 </ul>
 </nav>
-<img src="ig/menu.png" id="menuBtn">
+<img src="menu.png" id="menuBtn">
 
 
 
