--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@ Lorem ipsum dolor sitdipiscing.Lorem ipsum dolor sit adipiscingelit.Etiam eu luc
 
 <section id="about">
 <div class="about-left-col">
-<img src="ig/pic3.png">
+<img src="pic3.png">
 </div>
 
 <div class="about-right-col">
@@ -419,17 +419,17 @@ Lorem ipsum dolor sitdipiscing.Lorem ipsum dolor sit adipiscingelit.Etiam eu luc
 
 <div class="features-row">
 <div class="features-col">
-<img src="ig/pic4.png">
+<img src="pic4.png">
 <h4>Learn Anywhere</h4>
 <p>Switch between your computer, tablet or mobile device</p>
 </div>
 <div class="features-col">
-<img src="ig/pic5.png">
+<img src="pic5.png">
 <h4>Expert Teacher</h4>
 <p>Switch between your computer, tablet or mobile device</p>
 </div>
 <div class="features-col">
-<img src="ig/pic6.png">
+<img src="pic6.png">
 <h4>Unlimited Access</h4>
 <p>Switch between your computer, tablet or mobile device</p>
 </div>
@@ -468,7 +468,7 @@ Lorem ipsum dolor sitdipiscing.Lorem ipsum dolor sit adipiscingelit.Etiam eu luc
 
 
 <div class="courses-right-col">
-<img src="ig/course.png">
+<img src="course.png">
 </div>
 </div>
 </section>
@@ -480,7 +480,7 @@ Lorem ipsum dolor sitdipiscing.Lorem ipsum dolor sit adipiscingelit.Etiam eu luc
 
 <section id="offer">
 <div class="about-left-col">
-<img src="ig/offer.png">
+<img src="offer.png">
 </div>
 
 <div class="about-right-col">
@@ -522,7 +522,7 @@ Lorem ipsum dolor sitdipiscing.Lorem ipsum dolor sit adipiscingelit.Etiam eu luc
 </div>
 </div>
 <div class="container-right-col">
-<img src="ig/contact.png">
+<img src="contact.png">
 </div>
 </div>
 </section>
@@ -569,7 +569,7 @@ Lorem ipsum dolor sitdipiscing.Lorem ipsum dolor sit adipiscingelit.Etiam eu luc
 <small>copyright 2020 Xypo</small>
 </div>
 <div class="footer-logo">
-<img src="ig/logo1.png">
+<img src="logo1.png">
 <button class="common-btn">English</button>
 </div>
 </div>
@@ -581,10 +581,10 @@ Lorem ipsum dolor sitdipiscing.Lorem ipsum dolor sit adipiscingelit.Etiam eu luc
 <!-----social icons----->
 
 <div class="social-icon">
-<img src="ig/fb.png">
-<img src="ig/ins.png">
-<img src="ig/twt.png">
-<img src="ig/lin.png">
+<img src="fb.png">
+<img src="ins.png">
+<img src="twt.png">
+<img src="lin.png">
 </div>
 
 <div class="emt">
