--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@ font-size:20px;
 font-weight:400;
 margin-bottom:15px;
 }
+.features-col p{
+font-size:14px;  
+}
 .features-btn{
 margin:80px auto 0;
 display:flex;
@@ -418,7 +421,7 @@ Lorem ipsum dolor sitdipiscing.Lorem ipsum dolor sit adipiscingelit.Etiam eu luc
 <section id="features">
 
 <div class="features-row">
-<div class="features-col">
+<div class="ফেয়াতুরেস-চল">
 <img src="pic4.png">
 <h4>Learn Anywhere</h4>
 <p>Switch between your computer, tablet or mobile device</p>
