--- a/index.html
+++ b/index.html
@@ -422,6 +422,7 @@ Lorem ipsum dolor sitdipiscing.Lorem ipsum dolor sit adipiscingelit.Etiam eu luc
 
 <div class="features-row">
 <div class="features-col">
+<img src="pic4.png">
 <h4>Learn Anywhere</h4>
 <p>Switch between your computer, tablet or mobile device</p>
 </div>
