--- a/index.html
+++ b/index.html
@@ -212,6 +212,9 @@ max-width:350px;
 .courses-text button{
 margin:30px 0;
 }
+.courses-text p{
+font-size:14px; 
+}
 /*---offer---*/
 #offer button{
 margin:30px 0;
