--- a/index.html
+++ b/index.html
@@ -215,6 +215,9 @@ margin:30px 0;
 .courses-text p{
 font-size:10px; 
 }
+.coto{
+font-size:14px; 
+}
 /*---offer---*/
 #offer button{
 margin:30px 0;
@@ -461,7 +464,7 @@ Lorem ipsum dolor sitdipiscing.Lorem ipsum dolor sit adipiscingelit.Etiam eu luc
 <div class="courses-text">
 <h1>Browse our top<br>courses</h1>
 <span class="square"></span>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies at, vulputate id lorem. Nulla Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies at, Lorem  consectetur</p>
+<p class="coto">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies at, vulputate id lorem. Nulla Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies at, Lorem  consectetur</p>
 <button class="common-btn">View All Courses</button>
 <div class="line">
 <span class="line-1"></span><br>
